--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -174,7 +174,9 @@ p{
     font-weight: 500;
     color: #989393;
 }
-
+.mobile-row{
+    display: none;
+}
 /* Normal desktop :1200px. */
 @media (min-width: 1200px) and (max-width: 1500px) {
 
@@ -203,6 +205,96 @@ p{
     }
     .score-row{
         display: none;
+    }
+    .scorbody{
+        width: 100%;
+    }
+    .score-row{
+        display: none;
+    }
+    .mobile-row{
+        display: block;
+        width: 100%;
+       min-height: 220px;
+       border-bottom: 1px solid #ddd;
+    }
+    .mobile-match-info{
+        width: 100%;
+        padding-top: 20px;
+    }
+    .mobile-match-info h5{
+        text-transform: uppercase;
+        font-size: 12px;
+        font-weight: bold;
+    }
+    .mobile-match-info span{
+        background-color: #f47320;
+        font-weight: 700;
+        color: #fff;
+        padding: 5px;
+        border-radius: 8px;
+        z-index: 0;
+    }
+    .mobile-match-info span::before{
+        content: "";
+        width: 40px;
+        height: 40px;
+        background: #f47320;
+        border-radius: 50%;
+        z-index: -1;
+    }
+    .m-live{
+        color: #f47320
+    }
+    .mobile-team{
+        text-align: center;
+        width: 100%;
+        padding:15px;
+        height: 85px;
+    }
+    .mobile-team-a{
+        height: auto;
+        float: left;
+        width: 30%;
+        font-size: 14px;
+        text-align: center;
+    }
+    .mobile-team-a h5{
+        font-size: 14px;
+        font-weight: bold;
+    }
+    .mobile-team-a-flag{
+        width: 15%;
+        float: left;
+        margin-top: 10px;
+    }
+    .mobile-team span{
+        width: 10%;
+        float: left;
+        font-weight: bold;
+        color: #f47320;
+        text-align: center;
+        margin-top: 15px;
+    }
+    .mobile-team-b-flag{
+        width: 15%;
+        float: left;
+        margin-top: 10px;
+    }
+    .mobile-team-b{
+        height: auto;
+        float: left;
+        width: 30%;
+        font-size: 14px;
+        text-align: center;
+    }
+    .mobile-team-b h5{
+        font-size: 14px;
+        font-weight: bold;
+        height: auto;
+    }
+    .mobile-team-b p{
+        font-size: 12px;
     }
 }
 
